import "LockInfo.proto";


option java_outer_classname="GetCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetCommand {
	optional bytes key = 1;
	optional int64 requestId = 2;
	optional int32 flag = 3;
	optional string group = 4;
	optional string subGroup = 5;
	optional LockInfo lockInfo = 6;
	optional uint64 version = 7;
	optional string providerName = 8;
}