
option java_outer_classname="LockInfoProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message LockInfo {
	optional int32 lockAccessType = 1;
	optional string lockId = 2;
	optional int64 lockTimeout = 3;
}